syntax = "proto3";

option go_package = "pc-book/pb";

import "memory_message.proto";

message FilterMessage {
    double max_price_usd = 1;
    uint32 cpu_cores = 2;
    double mix_cpu_ghz = 3;
    Memory min_ram = 4;    
}